--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h2>main app compoennt</h2>
-<app-registration></app-registration>
+<!--<app-registration></app-registration>-->
+<app-login></app-login>
+<nav>
+  <a routerLink="/register" routerLinkActive="active">Registration</a>
+</nav>
+<router-outlet></router-outlet>
