--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -10,6 +10,19 @@
           class="form-control"
           formControlName="username"
           required>
+        <span class="help-block"
+              *ngIf="!registrationForm.controls['username'].valid && registrationForm.controls['username'].touched">Username is required</span>
+      </div>
+      <div class="user-data">
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password"
+          class="form-control"
+          formControlName="password"
+          required>
+          <span class="help-block"
+                *ngIf="!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched">Password is required</span>
+        </div>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
