--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h2>main app compoennt</h2>
-<!--<app-registration></app-registration>-->
-<app-login></app-login>
-<nav>
-  <a routerLink="/register" routerLinkActive="active">Registration</a>
-</nav>
+<app-header></app-header>
 <router-outlet></router-outlet>
