--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,12 @@
-<h1>Login</h1>
-<input type="text" [(ngModel)]="loginData.username"/>
-<input type="password" [(ngModel)]="loginData.password"/>
-<button (click)="login()" type="submit">Login</button>
+<div class="container">
+  <div class="row"><h3>Log in</h3></div>
+  <div class="form-group"><label for="username">Username</label>
+    <input id="username" class="form-control" type="text" [(ngModel)]="loginData.username"/>
+  </div>
+  <div>
+    <label for="password">Username</label>
+    <input class="form-control" type="password" id="password" [(ngModel)]="loginData.password"/>
+  </div>
+
+  <button (click)="login()" type="submit">Login</button>
+</div>
