login/logout option on header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,11 @@
 <div id="navbar">
   <a href="#home">Home</a>
   <a routerLink="/register" routerLinkActive="active">Registration</a>
-  <a routerLink="/login" routerLinkActive="active">Log in</a>
+  <div *ngIf="isLoggedIn();else logoutbutton">
+    <a (click)="logout()">Log out</a>
+  </div>
+  <ng-template #logoutbutton>
+    <a routerLink="/login" routerLinkActive="active">Log in</a>
+  </ng-template>
+
 </div>
