--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,7 @@
   background-color: #333;
 }
 #navbar{
-  background-color: #f47d42;
+  background-color: #f44141;
 }
 
 /* Navbar links */
@@ -19,7 +19,7 @@
 
 #navbar a:hover{
   background-color:#f2f2f2;
-  color: #f47d42;
+  color: #f44141;
 }
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
