--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,30 +3,34 @@
 
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit(registrationForm.value)">
     <div class="user-data">
-      <div class="form-group"><label for="username">Username</label>
+      <div class="form-group">
         <input
+          placeholder="Username"
           type="text"
           id="username"
           class="form-control"
           formControlName="username"
           required>
         <span class="help-block"
-              *ngIf="!registrationForm.controls['username'].valid && registrationForm.controls['username'].touched">Username is required</span>
+              *ngIf="!registrationForm.controls['username'].valid && registrationForm.controls['username'].touched">
+          <span class="glyphicon glyphicon-exclamation-sign"></span>Username is required</span>
       </div>
       <div class="user-data">
         <div class="form-group">
-          <label for="password">Password</label>
           <input type="password" id="password"
+                 placeholder="Password"
                  class="form-control"
                  formControlName="password"
                  required>
           <span class="help-block"
-                *ngIf="!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched">Password is required</span>
+                *ngIf="!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched">
+            <span class="glyphicon glyphicon-exclamation-sign"></span>
+            Password is required</span>
         </div>
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
         <input
+          placeholder="Email address"
           id="email"
           class="form-control"
           formControlName="email"
@@ -34,19 +38,26 @@
           required
           email>
         <span class="help-block"
-              *ngIf="!registrationForm.controls['email'].valid && registrationForm.controls['email'].touched">Please enter a valid email</span>
+              *ngIf="!registrationForm.controls['email'].valid && registrationForm.controls['email'].touched">
+          <span class="glyphicon glyphicon-exclamation-sign"></span>
+          Please enter a valid email</span>
       </div>
       <div class="form-group">
-        <label for="role">Role</label>
-        <select formControlName="role" id="role" class="form-control">
-          <option *ngFor="let role of roles" [value]="role">{{role}}</option>
+        <select
+                 formControlName="role"
+                 id="role"
+                 class="form-control">
+          <option *ngFor="let role of roles" [value]="role"
+                   >{{role}}</option>
         </select>
       </div>
     </div>
-    <button
-      class="btn btn-primary"
-      type="submit"
-      [disabled]="!registrationForm.valid">Submit
-    </button>
+    <div id="register-button">
+      <button
+        class="btn btn-block"
+        type="submit"
+        [disabled]="!registrationForm.valid">Submit
+      </button>
+    </div>
   </form>
 </div>
