--- a/src/app/home/left-menu/left-menu.component.html
+++ b/src/app/home/left-menu/left-menu.component.html
@@ -2,16 +2,26 @@
   <div class="form-group">
     <div class="col-md-12 right-divider">
       <ul class="nav">
-        <li><a [routerLink]="[{outlets: {'left-menu-content': ['new-team']}}]">Create new team</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
-        <li><a href="#">Section</a></li>
+        <li>
+          <button class="btn btn-block" [routerLink]="[{outlets: {'left-menu-content': ['new-team']}}]">Create new
+            team
+          </button>
+        </li>
+        <li>
+          <button class="btn btn-block" href="#">Section</button>
+        </li>
+        <li>
+          <button class="btn btn-block" href="#">Section</button>
+        </li>
+        <li>
+          <button class="btn btn-block" href="#">Section</button>
+        </li>
+        <li>
+          <button class="btn btn-block" href="#">Section</button>
+        </li>
+        <li>
+          <button class="btn btn-block" href="#">Section</button>
+        </li>
       </ul>
     </div>
   </div>
