--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,5 +1,4 @@
 
-
 .events-content{
   min-height: 100vh;
 }
@@ -15,14 +14,15 @@ input:checked + label {
 }
 
 .event-label{
-  padding-right: 5px;
-  padding-left: 5px;
+  padding: 2px;
+  height: 10vh;
+
 }
 
 .event-label label{
-  width: 25vh;
-  height: 10vh;
-
+  width: 100%;
+  height: 100%;
   background-color: darkgray;
   color: #f2f2f2;
 }
+
