--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,28 +1,62 @@
-
-.events-content{
-  min-height: 100vh;
+.container {
+  margin-top: 60px;
 }
 
 input {
-  visibility:hidden;
+  visibility: hidden;
 }
+
 label {
-  cursor: pointer;
-}
-input:checked + label {
-  background: red;
-}
-
-.event-label{
-  padding: 2px;
-  height: 10vh;
-
-}
-
-.event-label label{
+  padding-top: 20px;
+  font-size: 16px;
+  text-align: center;
   width: 100%;
-  height: 100%;
+  /* height: 100%;*/
+  display: table-cell;
+}
+
+input:checked + label {
+  background: #f44141;
+}
+
+.event-label {
+  padding: 1px;
+  height: 10vh;
+  display: table;
+}
+
+.event-label label {
+  cursor: pointer;
+  padding-right: 0px;
+  padding-left: 0px;
   background-color: darkgray;
   color: #f2f2f2;
+}
+
+button {
+  background-color: #f44141;
+  color: #f2f2f2;
+  margin-top: 20px;
+}
+
+button:hover {
+  background-color: red;
+  color: #f2f2f2;
+}
+
+div label.date-name-label {
+ display: table;
+  padding: 2px;
+  height: 10vh;
+}
+
+label.date-name-label {
+  background-color: #f44141;
+  color: #f2f2f2;
+}
+
+div.col-sm-2{
+  margin: 0px;
+  padding: 0px;
 }
 
