--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -7,7 +7,7 @@ input {
 }
 
 label {
-  padding-top: 20px;
+
   font-size: 16px;
   text-align: center;
   width: 100%;
@@ -19,13 +19,13 @@ input:checked + label {
   background: #f44141;
 }
 
-.event-label {
-  padding: 1px;
+.event-label-cell {
   height: 10vh;
   display: table;
+  margin-left: -10px;
 }
 
-.event-label label {
+.event-label-cell label {
   cursor: pointer;
   padding-right: 0px;
   padding-left: 0px;
@@ -45,18 +45,19 @@ button:hover {
 }
 
 div label.date-name-label {
- display: table;
+  display: table;
   padding: 2px;
+  width: 100%;
   height: 10vh;
 }
 
 label.date-name-label {
   background-color: #f44141;
+  display: table-cell;
   color: #f2f2f2;
 }
 
 div.col-sm-2{
-  margin: 0px;
-  padding: 0px;
+  padding: 1px;
 }
 
