mock http request

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,5 @@
-<!--
-<div class="col-sm-2">
-  <app-left-menu></app-left-menu>
+<div class="container picture-area"></div>
+
+      <div class="centered" ><span id="title">SquadAgenda</span>
 </div>
-<div class="col-sm-10">
-  <router-outlet name="left-menu-content"></router-outlet>
-</div>-->
 
