--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -18,6 +18,12 @@
   text-decoration: none;
 }
 
+.navbar-brand{
+  background-color:#f44141;
+  color: #f2f2f2;
+  border: 1px solid #f2f2f2;
+}
+
 #navbar a:hover{
   background-color:#f2f2f2;
   color: #f44141;
