--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 /* angular-cli file: src/styles.css */
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+
+*{
+  font-family:Arial, Helvetica, sans-serif;
+}
