teams and boards first attempt

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,12 +11,14 @@
           <a routerLink="/teams" routerLinkActive="active"><span class="glyphicon glyphicon-flag"></span> Teams</a>
           <a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Log out</a>
         </div>
+      <!--  <a routerLink="/boards" routerLinkActive="active"><span class="glyphicon glyphicon-th-list"></span> Boards</a>-->
       </div>
 
       <div class="col-sm-2">
         <ng-template #logoutbutton>
           <a routerLink="/register" routerLinkActive="active"><span class="glyphicon glyphicon-pencil"></span> Registration</a>
           <a routerLink="/login" routerLinkActive="active"><span class="glyphicon glyphicon-log-in"></span> Log in</a>
+
         </ng-template>
       </div>
 
