team board view

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
           <a routerLink="/my-profile" routerLinkActive="active"><span class="glyphicon glyphicon-user"></span> Profile</a>
           <a routerLink="/events" routerLinkActive="active"><span class="glyphicon glyphicon-star-empty"></span> Events</a>
           <a routerLink="/teams" routerLinkActive="active"><span class="glyphicon glyphicon-flag"></span> Teams</a>
-          <a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Log out</a>
+          <a id="logoutbutton"(click)="logout()" ><span class="glyphicon glyphicon-log-out"></span> Log out</a>
         </div>
       <!--  <a routerLink="/boards" routerLinkActive="active"><span class="glyphicon glyphicon-th-list"></span> Boards</a>-->
       </div>
