--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -3,10 +3,15 @@
   <div class="col-sm-10 events-content">
     <div>
       <div *ngFor="let event of events" class="row">
-        <div class="col-sm-2"><label class="date-name-label">{{event.when | date: 'EE, MM LLLL'}}</label></div>
+        <div class="col-sm-2"><label class="date-name-label">{{event.when | date: 'EEEE, dd MM'}}</label></div>
         <div *ngFor="let type of eventTypes">
           <div class="event-label-cell col-sm-2">
-            <input type="radio" name="{{event.id}}" id="{{event.id}}{{type}}" (change)="onChange({'id': event.id , 'type': type})">
+            <input type="radio"
+                   name="{{event.id}}"
+                   id="{{event.id}}{{type}}"
+                   [checked]="type === event.type"
+                   (change)="onChange({'id': event.id , 'type': type})"
+            >
             <label for="{{event.id}}{{type}}">{{type}}</label>
           </div>
         </div>
