home page styling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header one-edge-shadow">
   <nav class="navbar-fixed-top">
     <div id="navbar">
       <div class="col-sm-2"></div>
