--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container picture-area"></div>
-
-      <div class="centered" ><span id="title">SquadAgenda</span>
+<img class="bg" src="/assets/office.jpg">
+<div class="centered parent topandbottom">
+  <div class="child"><span id="title">SquadAgenda</span></div>
 </div>
 
