--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,8 @@
 
-
 h1 {
   font-size: 5vh;
   margin-bottom: 30px;
 }
-
 
 #title {
   font-family: "Arial Black", Gadget, sans-serif;
@@ -13,18 +11,64 @@ h1 {
   border: 10px solid #f44141;
   padding: 10px;
   border-radius: 20px;
+  /*opacity: 1;*/
   font-weight: bold;
+  /*color: rgba(245,65,65,1);*/
 }
 
-.picture-area{
+.picture-area {
   position: relative;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .centered {
+  width: 100%;
+  padding: 150px;
+  background: white;
+  text-align: center;
   position: absolute;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  /* Specific to this particular image */
+  img.bg {
+    left: 50%;
+    margin-left: -512px; /* 50% */
+  }
+}
+
+.child {
+  color: rgba(245, 65, 65, 1);
+}
+
+.parent {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.topandbottom {
+
+  box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -moz-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -webkit-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -o-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+}
