--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -1,5 +1,5 @@
 
-.container-top{
+.container-top {
   margin-top: 40px;
 }
 
@@ -7,6 +7,19 @@ textarea {
   resize: none;
 }
 
-#search-input{
-margin-top: 20px;
+#search-input {
+  margin-top: 20px;
+  padding: 5px;
+  width: 100%;
+}
+
+.single-team-area {
+  min-height: 20vh;
+  margin: 5px;
+  background-color: lightgray;
+  padding: 20px;
+}
+
+h2 {
+  font-family: "Arial Black", Gadget, sans-serif;
 }
