--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,18 +1,18 @@
-<div class="container" >
+<div class="container">
   <div class="row container-top">
     <div class="col-sm-7">
       <div class="row">
         <div class="col-sm-6"><label><h2>Available Teams:</h2></label></div>
-        <div class="col-sm-6"> <input type="text" class="form-control " id="search-input" placeholder="Search..."></div>
+        <div class="col-sm-6"><input type="text" [(ngModel)]="searchText" id="search-input" placeholder="Search Team..."></div>
       </div>
-      <div *ngFor="let team of teams" class="row">
-       <app-team-element [team]="team"></app-team-element>
+      <div *ngFor="let team of teams | teamfilter: searchText" class="row single-team-area">
+        <app-team-element [team]="team"></app-team-element>
       </div>
     </div>
     <div class="col-sm-1"></div>
     <div class="col-sm-4">
       <h2>Create New Team:</h2>
-      <form  [formGroup]="teamForm" (ngSubmit)="onSubmit(teamForm.value)">
+      <form [formGroup]="teamForm" (ngSubmit)="onSubmit(teamForm.value)">
         <div class="form-group">
 
           <input placeholder="Name"
@@ -24,9 +24,9 @@
         <div class="form-group">
 
           <textarea placeholder="Description"
-                 id="description"
-                 class="form-control"
-                 formControlName="description"
+                    id="description"
+                    class="form-control"
+                    formControlName="description"
                     rows="4"
                     type="text"></textarea>
         </div>
