--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-1"></div>
   <div class="col-sm-10 events-content">
     <div>
-      <div *ngFor="let event of events" class="row">
+      <div *ngFor="let event of newEvents" class="row">
         <div class="col-sm-2"><label class="date-name-label">{{event.when | date: 'EEEE, dd MM'}}</label></div>
         <div *ngFor="let type of eventTypes">
           <div class="event-label-cell col-sm-2">
