--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -50,7 +50,6 @@ img.bg {
 }
 
 @media screen and (max-width: 1024px) {
-  /* Specific to this particular image */
   img.bg {
     left: 50%;
     margin-left: -512px; /* 50% */
@@ -66,9 +65,9 @@ img.bg {
 }
 
 .topandbottom {
-
+/*
   box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
   -moz-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
   -webkit-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
-  -o-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -o-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;*/
 }
