--- a/src/app/team/team-element/team-element.component.css
+++ b/src/app/team/team-element/team-element.component.css
@@ -1,16 +1,15 @@
 
-
-h2{
+h2 {
   margin-top: 10px;
 }
 
-h4{
+h4 {
   vertical-align: middle;
   padding-left: 10px;
 
 }
 
-.join-team-button{
+.join-team-button {
   color: #f44141;
   background-color: #f2f2f2;
   border: 1px solid #f44141;
@@ -19,20 +18,30 @@ h4{
 
 }
 
-.join-team-button:hover{
+.join-team-button:hover {
   color: #f2f2f2;
   background-color: #f44141;
 }
 
-.members-label{
+.members-label {
   border-radius: 0;
   margin: 1px;
 }
 
-.team-name-label{
+.team-name-label {
   color: white;
   font-family: "Arial Black", Gadget, sans-serif;
   border-radius: 0;
   padding: 5px;
   background-color: grey;
+}
+
+.empty-team-label {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  margin: 0;
+  padding: 5px;
+  color: grey;
+  text-align: center;
 }
