--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -12,7 +12,9 @@
       </div>
     </div>
     <div class="row profile-section">
-      <div class="col-sm-12"><h2>Teams</h2></div>
+      <div class="col-sm-12"><h2>My Teams</h2>
+      <app-my-teams [teams]="userTeams"></app-my-teams>
+      </div>
     </div>
 
   </div>
