--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="row profile-section">
-      <div class="col-sm-12"><h2>My Teams</h2>
+      <div class="col-sm-12">
       <app-my-teams [teams]="userTeams"></app-my-teams>
       </div>
     </div>
