--- a/src/app/team/team-element/team-element.component.html
+++ b/src/app/team/team-element/team-element.component.html
@@ -1,21 +1,23 @@
 <div class="team-element">
   <div class="row">
-    <div class="col-sm-3 "><h2><span class="label team-name-label">{{team.name}}</span></h2></div>
-    <div class="col-sm-6"><h4>{{team.description}}</h4></div>
-    <div class="col-sm-3">
+    <div class="col-sm-12"><label class="label team-name-label ">{{team.name}}</label></div>
+    <div class="col-sm-8"><h4>{{team.description}}</h4></div>
+    <div class="col-sm-4">
       <div *ngIf="isUserInTeam(); else removeFromTeamButton">
-        <button class="join-team-button btn btn-block" (click)="openModal(team.id + 1)">Leave</button>
+        <button class="join-leave-team-button btn btn-block" (click)="openModal(team.id + 1)">Leave</button>
       </div>
       <ng-template #removeFromTeamButton>
-        <button class="join-team-button btn btn-block" (click)="openModal(team.id)">Join</button>
+        <button class="join-leave-team-button btn btn-block" (click)="openModal(team.id)">Join</button>
       </ng-template>
-      <button class="join-team-button btn btn-block" type="submit" routerLink="/boards/{{team.id}}" routerLinkActive="active">See</button>
+      <button class="join-leave-team-button btn btn-block" type="submit" routerLink="/boards/{{team.id}}" routerLinkActive="active">See</button>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <h2><span *ngFor="let member of team.members" class="label label-info members-label">{{member.name}}</span></h2>
-      <label *ngIf="team.members.length == 0" class="empty-team-label"> There is no members in this team</label>
+      <div class="member-label" *ngFor="let member of team.members">
+        <label>{{member.name}}</label>
+      </div>
+      <label *ngIf="team.members.length == 0" class="empty-team-label"><p> There is no members in this team</p></label>
     </div>
   </div>
 </div>
