--- a/src/app/team/teams-list.component.html
+++ b/src/app/team/teams-list.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row container-top">
-
-    <div class="col-sm-8">
-      <div class="row">
-        <div class="col-sm-6"><label><h2>Available Teams:</h2></label></div>
-        <div class="col-sm-6"><input type="text" [(ngModel)]="searchText" id="search-input" placeholder="Search Team...">
+<div class="container container-top">
+  <div class="row">
+    <div class="col-sm-7">
+      <div class="row available-teams-search">
+        <div class="col-sm12">
+        <label><h2>Available Teams:</h2></label>
+        <input type="text" [(ngModel)]="searchText" placeholder="Search Team...">
         </div>
       </div>
       <div class="row">
@@ -13,19 +13,18 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="row">
-          <div class="col-sm-12">
-            <app-create-team></app-create-team>
-          </div>
 
-          <div class="col-sm-12">
-            <app-my-teams [teams]="userTeams"></app-my-teams>
-          </div>
+    <div class="col-sm-4">
+
+      <div class="row">
+        <div class="col-sm-12">
+          <app-my-teams [teams]="userTeams"></app-my-teams>
         </div>
+        <div class="col-sm-12">
+          <app-create-team></app-create-team>
+        </div>
+
       </div>
     </div>
-
   </div>
 </div>
