--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -2,20 +2,23 @@
   <div class="row profile-section">
     <h1>My profile</h1></div>
   <div class=" row ">
-    <div class="row image-frame">
-      <div class="col-sm-4"><img [src]="placeholderImagePath" height="200" width="200">
-        <h2>{{user.username}}</h2>
-        <h4>{{user.email}}</h4>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+      <h2>About me</h2>
+      <div class="row">
+        <img [src]="'data:image/png;base64,'+user.avatar" height="200" width="200">
+        <input type="file" (change)="selectFile($event)">
+        <button (click)="upload()">Upload</button>
       </div>
-      <div class="col-sm-8">
-        <h3>About me</h3>
+      <div class="row">
+        <h3>{{user.username}}</h3>
+        <h3>{{user.email}}</h3>
       </div>
-    </div>
-    <div class="row profile-section">
-      <div class="col-sm-12">
-      <app-my-teams [teams]="userTeams"></app-my-teams>
-      </div>
-    </div>
 
+    </div>
+    <div class="col-sm-7">
+      <app-my-teams [teams]="userTeams"></app-my-teams>
+    </div>
+    <div class="col-sm-1"></div>
   </div>
 </div>
