project badges from github

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,7 @@
         <div *ngIf="isLoggedIn();else logoutbutton">
           <a routerLink="/my-profile" routerLinkActive="active"><span class="glyphicon glyphicon-user"></span> Profile</a>
           <a routerLink="/events" routerLinkActive="active"><span class="glyphicon glyphicon-star-empty"></span> Events</a>
+          <a routerLink="/rooster" routerLinkActive="active">Projects</a>
           <a routerLink="/teams" routerLinkActive="active"><span class="glyphicon glyphicon-flag"></span> Teams</a>
           <a id="logoutbutton"(click)="logout()" ><span class="glyphicon glyphicon-log-out"></span> Log out</a>
         </div>
