--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,9 +1,14 @@
-<div class="container">
-  <div class="row profile-section">
-    <h1>My profile</h1></div>
-  <div class=" row ">
+<div class="col-sm-2"></div>
+<div class="col-sm-8">
+  <div class="row">
+    <div class="profile-section col-sm-12">
+      <h1>My profile</h1></div>
+  </div>
+
+  <div class="row  content-box">
     <div class="col-sm-1"></div>
-    <div class="col-sm-3">
+    <div class="col-sm-5">
+
       <h2>About me</h2>
       <div class="row">
         <img [src]="'data:image/png;base64,'+user.avatar" height="200" width="200">
@@ -16,9 +21,11 @@
       </div>
 
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-5">
       <app-my-teams [teams]="userTeams"></app-my-teams>
     </div>
     <div class="col-sm-1"></div>
   </div>
 </div>
+<div class="col-sm-2"></div>
+
