--- a/src/app/team/team-element/team-element.component.css
+++ b/src/app/team/team-element/team-element.component.css
@@ -4,8 +4,16 @@ h2 {
 }
 
 button.join-leave-team-button {
-  width: 50%;
   font-size: 18px;
+  background-color: #f44141;
+  color: white;
+  width: 100%;
+  border: 0;
+  margin: 2px;
+}
+
+button.join-leave-team-button:hover {
+  background-color: red;
 }
 
 label, button {
@@ -20,7 +28,7 @@ div.member-label {
 
 div.member-label > label {
   width: 100%;
-
+  border-radius: 5px;
   font-size: 18px;
   padding: 10px;
   background-color: coral;
@@ -35,6 +43,7 @@ label.empty-team-label {
 }
 
 .team-name-label {
+  border-radius: 5px;
   color: black;
   background-color: cadetblue;
   display: block;
@@ -43,6 +52,11 @@ label.empty-team-label {
 }
 
 .team-element {
-  padding: 5px;
-  border: 1px solid #f44141;
+  margin: 5px;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -moz-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -webkit-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
+  -o-box-shadow: 0px -1px 1px rgba(78, 81, 86, 0.3), 0 1px 1px;
 }
