--- a/src/app/team/teams-list.component.css
+++ b/src/app/team/teams-list.component.css
@@ -2,12 +2,11 @@
 .container-top {
   margin-top: 40px;
 }
-
+/*
 .single-team-area {
   margin-bottom: 3px;
   min-height: 20vh;
-
-}
+}*/
 
 h2 {
   font-family: "Arial Black", Gadget, sans-serif;
