registration page - log in user after account creation

--- a/src/app/team-board/board-element/board-element.component.css
+++ b/src/app/team-board/board-element/board-element.component.css
@@ -22,9 +22,9 @@ p{
   text-align: center;
 }
 
-/*.NO_EVENT {
-  background-color: grey
-}*/
+.NO_EVENT {
+  visibility: hidden;
+}
 
 .VACATION {
   background-color: gold
