--- a/src/app/team-board/board-element/board-element.component.html
+++ b/src/app/team-board/board-element/board-element.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="img-container col-sm-1" [style.height]="height">
 
-    <img *ngIf="avatar != null;else placeholder" [src]="'data:image/png;base64,'+ avatar">
+    <img *ngIf="avatar != null;else placeholder" [src]="'data:image/png;base64,'+ avatar.avatar">
     <ng-template #placeholder><img [src]="placeholderImagePath"></ng-template>
  <p>{{member.name}}</p>
   </div>
   <div class="events col-sm-11" [style.height]="height">
-    <label class="event-label" [ngClass]="event.type" [style.width]="width" *ngFor="let event of events"><br>{{event.type}}<br>{{event.when}}</label>
+    <label class="event-label" [ngClass]="event.type" [style.width]="width" *ngFor="let event of events"><br>{{event.type}}</label>
   </div>
 
 </div>
